src/components/jumbotron/Jumbotron.css
@import url('https://fonts.googleapis.com/css2?family=Arya:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

.home-body{
    z-index: -5;
    /*background: -webkit-linear-gradient(to bottom, #fff, #bfbebd);  !* Chrome 10-25, Safari 5.1-6 *!*/
    /*background: linear-gradient(to bottom, #fff,  #bfbebd); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
    /*background: rgba(255, 255, 255, 1.0);*/
    /*background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
    /*background: -moz-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
    /*background: linear-gradient(to bottom, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
    padding-bottom: 4rem;
}

.rootJumbo {
    background-image: url("../../assets/bg7.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 100vh;
}

.container-grid {
    width: 100%;
    padding-top: 10rem;
    height: 75vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    overflow: hidden;
}

.container-flex {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    height: 25vh;
    align-items: center;
    width: 100%;
}

.arrow {
    height: 70px;
    width: 70px;
    margin: -25px;
}

.arrows {
    display: flex;
    flex-direction: column;
    margin-top: 4rem;
}

.arrow-link {
    color: #4A5461;
}

.arrow-link:hover {
    color: #731E1C;
}

.mainHeading {
    margin-left: 7rem;
    color: #731E1C;
    font-family: Montserrat, sans-serif;
    font-size: 6rem;
    letter-spacing: 0.5rem;
    font-weight: 500;
}

.subHeading {
    margin-left: 7rem;
    font-size: 1.7rem;
    font-family: Arya, serif;
    font-weight: 700;
}

*:focus {
    box-shadow: none !important;
}

@media all and (max-width: 1224px) {
    .mainHeading {
        margin-left: 3rem;
        font-size: 5rem;
    }

    .subHeading {
        margin-left: 3rem;
        font-size: 1.5rem;
    }
}

@media all and (max-width: 991px) {
    .mainHeading {
        margin-left: 3rem;
        font-size: 4rem;
    }

    .subHeading {
        margin-left: 3rem;
        font-size: 1.25rem;
    }
}

@media all and (max-width: 668px) {
    .container-grid {
        padding-top: 11rem;
    }

    .input-group {
        font-family: Montserrat, sans-serif;
        width: 10rem;
        /*font-size: 0.1rem;*/
    }

    ::-webkit-input-placeholder {
        font-size: 0.65rem;
    }

    ::-moz-placeholder {
        font-size: 0.65rem;
    }


    .item {
        padding: 0;
        margin: 0;
    }

    .item h1 {
        text-align: center;
        font-size: 2rem;
    }

    .item p {
        font-size: 1rem;
    }

    #logo {
        height: 9rem;
        width: 16rem;
        margin-bottom: 1rem;
    }
}

@media all and (max-width: 768px) {
    .mainHeading {
        width: 70vw;
        margin-left: 2rem;
        font-size: 3.5rem;
        margin-bottom: 2rem;
    }

    .subHeading {
        width: 70vw;
        margin-left: 2rem;
        font-size: 1rem;
    }
}

@media all and (max-width: 662px) {
    .mainHeading {
        margin-left: 1rem;
        font-size: 3.5rem;
    }

    .subHeading {
        margin-left: 1rem;
        font-size: 1rem;
    }
}

@media all and (max-width: 598px) {
    .mainHeading {
        /*word-break: break-word;*/
        margin-left: 1rem;
        font-size: 3.25rem;
    }

    /*.subHeading {*/
    /*    margin-left: 3rem;*/
    /*    font-size: 1.25rem;*/
    /*}*/
}

@media all and (max-width: 392px){
    .mainHeading {
        width: 100vw;
    }

}


.Typist .Cursor {
    display: inline-block; }
.Typist .Cursor--blinking {
    opacity: 1;
    animation: blink 1s linear infinite; }

@keyframes blink {
    0% {
        opacity: 1; }
    50% {
        opacity: 0; }
    100% {
        opacity: 1; } }

